feat(ai-agent): 8 个 Function 工具全部接入真实数据查询
- GetSalesSummaryFunction: 查询订单表计算收入/订单/客单价/Top商品 (325行)
- GetInventoryStatusFunction: 查询库存+补货预警, 计算可售天数和健康状态 (357行)
- GetTopProductsFunction: 按收入/销量排行, 关联商品表获取标题 (246行)
- GetAdPerformanceFunction: 聚合广告报表, 计算ACoS/ROAS/CPC/CTR (424行)
- AnalyzeReviewsFunction: 聚合评论情感/痛点/卖点/用户画像分析 (330行)
- ForecastInventoryFunction: 基于30天销量计算补货点和建议订购量 (294行)
- GenerateListingFunction: 加载商品+评论数据, 组装AI生成上下文 (295行)
- GetKeywordDataFunction: 聚合搜索词数据, 计算转化率和竞争度 (312行)
- pom.xml: 添加 order/inventory/listing/ad/review 模块依赖